# PawAI

./: .env.example  .env.local.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  ISSUE_CODE_AUDIT_20260409.md  README.md  package-lock.json  package.json  phase1_test.sh  pyrightconfig.json  requirements-jetson.txt  setup.cfg  ssh-copy-id jetson  ssh-copy-id jetson.pub  start_go2_simple.sh  start_go2_wired.sh  start_go2_wired_webrtc.sh  start_mcp.sh
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.kilocode/: mcp.json
benchmarks/: .gitignore
config/: school_demo.env  school_demo.env.example
docs/: CHANGELOG.md  README.md
face_dashboard_fastapi/: README.md  main.py
face_perception/: package.xml  setup.cfg  setup.py
foxglove/: day3-verification.json  go2-3d-dashboard.json
gesture-wu/: gesture_recognition.py  readme.md
go2_interfaces/: AGENTS.md  CMakeLists.txt  package.xml
go2_interfaces/action/: GotoNamed.action  GotoRelative.action  LogPose.action  RunRoute.action
go2_interfaces/srv/: Cancel.srv
go2_omniverse/: AGENTS.md  omniverse_sim.py  ros2.py
go2_robot_sdk/: AGENTS.md  package.xml  setup.cfg  setup.py
interaction_executive/: package.xml  setup.cfg  setup.py
interaction_executive/config/: executive.yaml
interaction_executive/interaction_executive/: __init__.py  attention_machine.py  brain_node.py  interaction_executive_node.py  pending_confirm.py  safety_layer.py  skill_contract.py  skill_queue.py  state_machine.py  world_state.py
interaction_executive/launch/: interaction_executive.launch.py
interaction_executive/test/: test_attention_integration.py  test_attention_machine.py  test_brain_rules.py  test_idle_mvp.py  test_mini_e2e.py  test_pending_confirm.py  test_safety_layer.py  test_skill_contract.py  test_skill_contract_demo_fields.py  test_skill_queue.py  test_state_machine.py  test_world_state.py
lidar_processor/: package.xml
nav_capability/: package.xml  setup.cfg  setup.py
nav_capability/config/named_poses/: sample.json
nav_capability/config/routes/: sample.json
nav_capability/launch/: nav_capability.launch.py  navigation_remap.launch.py
nav_capability/nav_capability/: capability_publisher_node.py  log_pose_node.py  nav_action_server_node.py  route_runner_node.py  state_broadcaster_node.py
nav_capability/nav_capability/lib/: named_pose_store.py  nav_ready_check.py  progress_check.py  relative_goal_math.py  route_fsm.py  route_validator.py  standoff_math.py  tf_pose_helper.py
nav_capability/scripts/: emergency_stop.py
nav_capability/test/: test_named_pose_store.py  test_nav_ready_check.py  test_progress_check.py  test_relative_goal_math.py  test_route_fsm.py  test_route_validator.py  test_standoff_math.py  test_tf_pose_helper.py
nav_capability/test/integration/: test_mux_priority.py
object_perception/: package.xml  setup.cfg  setup.py
object_perception/config/: object_perception.yaml
object_perception/launch/: object_perception.launch.py
object_perception/object_perception/: coco_classes.py  object_perception_node.py
object_perception/test/: test_object_perception.py
pawai-studio/: OBJECT_DETECTION_README.md  README.md  package-lock.json  start-live.sh  start-school-live.sh  start.sh  stop.sh
pawai_brain/: .gitignore  package.xml  setup.cfg  setup.py
pawai_brain/config/: demo_guides.yaml  demo_policy.yaml
pawai_brain/launch/: pawai_conversation_graph.launch.py
pawai_brain/pawai_brain/: conversation_graph_node.py  graph.py  llm_client.py  memory.py  repair.py  rule_fallback.py  schemas.py  state.py  validator.py
pawai_brain/pawai_brain/capability/: demo_guides_loader.py  effective_status.py  registry.py  skill_result_memory.py  world_snapshot.py
pawai_brain/pawai_brain/nodes/: capability_builder.py  context_builder.py  env_builder.py  input_normalizer.py  json_validator.py  llm_decision.py  memory_builder.py  mode_classifier.py  output_builder.py  response_repair.py  safety_gate.py  skill_policy_gate.py  trace_emitter.py  world_state_builder.py
pawai_brain/personas/v1/: CAPABILITIES.md  EXAMPLES.md  IDENTITY.md  MISSION.md  OUTPUT.md  STYLE.md
pawai_brain/test/: test_capability_builder_node.py  test_capability_registry.py  test_conversation_graph_node.py  test_demo_guides_loader.py  test_demo_policy_loader.py  test_effective_status.py  test_graph_smoke.py  test_llm_client_offline.py  test_mode_classifier.py  test_response_repair.py  test_skill_policy_gate.py  test_skill_result_memory.py  test_skill_result_subscription.py  test_user_message_builder.py  test_validator.py  test_world_snapshot.py  test_world_state_builder.py
references/: environment.md  face.md  llm-brain.md  project-status.md  speech.md  studio.md  validation.md  (+1 more)
tools/pawai_cli/: README.md  pyproject.toml
tools/pawai_cli/pawai_cli/: __init__.py  cache.py  lock.py  main.py  modules.py  network.py  platform.py  shell.py  status.py
tools/pawai_cli/tests/: test_cache.py  test_cli.py  test_lock.py  test_network.py  test_platform.py
vision_perception/: package.xml  setup.cfg  setup.py
vision_perception/config/: vision_perception.yaml
vision_perception/launch/: event_action_bridge.launch.py  interaction_router.launch.py  lidar_obstacle.launch.py  obstacle_avoidance.launch.py  vision_perception.launch.py
vision_perception/test/: test_event_action_bridge.py  test_event_builder.py  test_gesture_classifier.py  test_gesture_recognizer_backend.py  test_interaction_rules.py  test_lidar_obstacle_detector.py  test_mediapipe_pose_mapping.py  test_obstacle_detector.py  test_pose_classifier.py
vision_perception/vision_perception/: dynamic_gesture_detector.py  event_action_bridge.py  event_builder.py  gesture_classifier.py  gesture_recognizer_backend.py  interaction_router.py  interaction_rules.py  lidar_obstacle_detector.py  lidar_obstacle_node.py  mediapipe_hands.py  mediapipe_pose.py  mock_event_publisher.py  mock_inference.py  obstacle_avoidance_node.py  obstacle_debug_overlay.py  obstacle_detector.py  pose_classifier.py  rtmpose_inference.py  vision_perception_node.py
(+903 files in other folders)
