<?xml version="1.0"?>
<package format="3">
  <name>pawai_brain</name>
  <version>0.1.0</version>
  <description>PawAI Conversation Engine — LangGraph-based stateful conversation graph (primary publisher of /brain/chat_candidate; legacy llm_bridge_node retained as manual fallback).</description>
  <maintainer email="roy422roy@gmail.com">roy</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>interaction_executive</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
