[project]
name = "pawai-cli"
version = "0.1.0"
description = "PawAI development and Jetson orchestration CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "python-dotenv>=1.0",
]

[project.scripts]
pawai = "pawai_cli.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
